[package]
name = "ashring"
version = "0.0.1"
authors = ["FeÌlix Saparelli <felix@passcod.name>"]

[dependencies]
openssl = "~0.0.2"
rust-crypto = "~0.1.1"
xxhash = "~0.0.1"

[dependencies.msgpack]
git = "https://github.com/mneumann/rust-msgpack.git"

[dependencies.fuse]
#git = "https://github.com/zargony/rust-fuse.git"
git = "https://github.com/abspoel/rust-fuse.git"
branch = "update-to-nightly"
